"$Id$"
Top of SVN tree:
------------------------------------------------------------------------------

More changes of char* to const char*.
 common/item-types.h
 common/items.pl
 gtk-v2/src/stats.c
 gtk-v2/src/config.c
 gtk-v2/src/image.c
 gtk-v2/src/main.c
Arvid Norlander 2008-06-01

Change some char* to const char*. This reduces memory usage when serveral copies
are running as const data can be shared between the copies.
 gtk/config.c
 gtk/keys.c
 gtk/map.c
 gtk/gx11.c
 gtk/image.c
 gtk/sdl.c
 gtk/text.c
 gtk/png.c
 gtk/sound.c
 common/item.c
 common/commands.c
 common/init.c
 common/script.c
 common/msgtypes.pl
 common/proto.h
 common/client.c
 common/msgtypes.h
 common/image.c
 common/client.h
 common/player.c
 common/newsocket.c
 common/script_lua.c
 common/metaserver.c
 common/misc.c
 gtk-v2/src/stats.c
 gtk-v2/src/spells.c
 gtk-v2/src/config.c
 gtk-v2/src/about.c
 gtk-v2/src/keys.c
 gtk-v2/src/metaserver.c
 gtk-v2/src/map.c
 gtk-v2/src/magicmap.c
 gtk-v2/src/image.c
 gtk-v2/src/sdl.c
 gtk-v2/src/main.c
 gtk-v2/src/opengl.c
 gtk-v2/src/png.c
 gtk-v2/src/sound.c
 gtk-v2/src/menubar.c
 gtk-v2/src/info.c
 gtk-v2/src/pickup.c
 gtk-v2/src/inventory.c
Arvid Norlander 2008-06-01

Move configure.in to configure.ac (the new name since a few years). Update
configure.ac syntax with autoupdate. Make help strings use AS_HELP_STRING.
 common/config.h.in
 aclocal.m4
 configure.ac
Moved:
 configure.in to configure.ac
Arvid Norlander 2008-06-01

Yet more fixes of Makefile.am/aclocal stuff: Make aclocal install needed macros
into the macros directory.
 Makefile.am
 aclocal.m4
Added:
 macros/pkg.m4
Arvid Norlander 2008-06-01

Fix Makefile.am so aclocal.m4 generation works correctly.
 Makefile.am
 aclocal.m4
Arvid Norlander 2008-06-01

Seems like the autotools define for LUA changed, update source to properly
use LUA.
 common/commands.c
 common/p_cmd.c
 common/script_lua.c
 common/config.h.in
 aclocal.m4
Arvid Norlander 2008-06-01
